--- a/collections/ansible_collections/purestorage/flashblade/galaxy.yml
+++ b/collections/ansible_collections/purestorage/flashblade/galaxy.yml
@@ -6,7 +6,8 @@ authors:
 - Pure Storage Ansible Team (@sdodsley) <pure-ansible-team@purestorage.com>
 description: Collection of modules to manage Pure Storage FlashBlades
 license:
- - GPL-2.0-or-later
+ - GPL-3.0-or-later
+ - BSD-2-clause
 tags:
   - purestorage
   - flashblade
