--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,11 @@ jobs:
       run: |
         cd collections/ansible_collections/purestorage/flashblade
         ansible-test sanity --docker=default --test pep8 plugins/modules/*
-    - name: Run Pylint
+    - name: Run flake8
+      run: |
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Run pylint
       run: |
         cd collections/ansible_collections/purestorage/flashblade
         ansible-test sanity --docker=default --test pylint plugins/modules/*
