--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,27 +21,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ansible purity_fb pycodestyle flake8
+        pip install purity_fb pycodestyle flake8 pytz
+        pip install ansible-base
     - name: Run pycodestyle
       run: |
         pycodestyle --max-line-length=160 --ignore=E305,E402,W503,W504,E722,E741,W606 ./
-    - name: Run yamlint
+    - name: Run sanity tests
       run: |
         cd collections/ansible_collections/purestorage/flashblade
-        ansible-test sanity --docker=default --test yamllint plugins/modules/*
-    - name: Run validate modules
-      run: |
-        cd collections/ansible_collections/purestorage/flashblade
-        ansible-test sanity --docker=default --test validate-modules plugins/modules/*
-        #    - name: Run pep8
-        #      run: |
-        #        cd collections/ansible_collections/purestorage/flashblade
-        #        ansible-test sanity --docker=default --test pep8 plugins/modules/*
+        ansible-test sanity --docker -v
     - name: Run flake8
       run: |
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --exit-zero --isolated --ignore E402 --select E,F,W --max-line-length 160
-    - name: Run pylint
-      run: |
-        cd collections/ansible_collections/purestorage/flashblade
-        ansible-test sanity --docker=default --test pylint plugins/modules/*
