FlashBlade Collection 1.4.0 Release

--- a/collections/ansible_collections/purestorage/flashblade/changelogs/changelog.yaml
+++ b/collections/ansible_collections/purestorage/flashblade/changelogs/changelog.yaml
@@ -39,3 +39,63 @@ releases:
     fragments:
     - v1.3.0_summary.yaml
     release_date: '2020-08-06'
+  1.4.0:
+    changes:
+      bugfixes:
+      - purefa_policy - Resolve multiple issues related to incorrect use of timezones
+      - purefb_connect - Ensure changing encryption status on array connection is
+        performed correctly
+      - purefb_connect - Fix breaking change created in purity_fb SDK 1.9.2 for deletion
+        of array connections
+      - purefb_connect - Hide target array API token
+      - purefb_ds - Ensure updating directory service configurations completes correctly
+      - purefb_info - Fix issue getting array info when encrypted connection exists
+      minor_changes:
+      - purefb_banner - Module to manage the GUI and SSH login message
+      - purefb_certgrp - Module to manage FlashBlade Certificate Groups
+      - purefb_certs - Module to create and delete SSL certificates
+      - purefb_connect - Support idempotency when exisitng connection is incoming
+      - purefb_fs - Add new options for filesystem control (https://github.com/Pure-Storage-Ansible/FlashBlade-Collection/pull/81)
+      - purefb_fs - Default filesystem size on creation changes from 32G to ``unlimited``
+      - purefb_fs - Fix error in deletion and eradication of filesystem
+      - purefb_fs_replica - Remove condition to attach/detach policies on unhealthy
+        replica-link
+      - purefb_info - Add support to list filesystem policies
+      - purefb_lifecycle - Module to manage FlashBlade Bucket Lifecycle Rules
+      - purefb_s3user - Add support for imported user access keys
+      - purefb_syslog - Module to manage syslog server configuration
+    fragments:
+    - 101_fix_policy_and_timezone_error.yaml
+    - 76_default_fs_size.yaml
+    - 77_filesystem_policies_info.yaml
+    - 78_update_filesystem_replica_link.yaml
+    - 79_hide_connect_api.yaml
+    - 80_support_reverse_replica_link.yaml
+    - 81_purefb_fs_new_options.yaml
+    - 83_add_certgrp.yml
+    - 84_add_cert.yaml
+    - 85_add_banner.yaml
+    - 86_add_syslog.yaml
+    - 88_add_lifecycle.yml
+    - 90_delete_conn_fix.yaml
+    - 90_imported_keys.yaml
+    - 92_fix_ds_update.yaml
+    - 96_fix_update_connection.yaml
+    - 97_fix_encrpyted_array_connection_info.yaml
+    modules:
+    - description: Configure Pure Storage FlashBlade GUI and SSH MOTD message
+      name: purefb_banner
+      namespace: ''
+    - description: Manage FlashBlade Certifcate Groups
+      name: purefb_certgrp
+      namespace: ''
+    - description: Manage FlashBlade SSL Certifcates
+      name: purefb_certs
+      namespace: ''
+    - description: Manage FlashBlade object lifecycles
+      name: purefb_lifecycle
+      namespace: ''
+    - description: Configure Pure Storage FlashBlade syslog settings
+      name: purefb_syslog
+      namespace: ''
+    release_date: '2020-10-14'
