--- a/collections/ansible_collections/purestorage/flashblade/changelogs/.plugin-cache.yaml
+++ b/collections/ansible_collections/purestorage/flashblade/changelogs/.plugin-cache.yaml
@@ -13,6 +13,11 @@ plugins:
       name: purefb_alert
       namespace: ''
       version_added: 1.0.0
+    purefb_banner:
+      description: Configure Pure Storage FlashBlade GUI and SSH MOTD message
+      name: purefb_banner
+      namespace: ''
+      version_added: 1.4.0
     purefb_bladename:
       description: Configure Pure Storage FlashBlade name
       name: purefb_bladename
@@ -28,6 +33,16 @@ plugins:
       name: purefb_bucket_replica
       namespace: ''
       version_added: 1.0.0
+    purefb_certgrp:
+      description: Manage FlashBlade Certifcate Groups
+      name: purefb_certgrp
+      namespace: ''
+      version_added: 1.4.0
+    purefb_certs:
+      description: Manage FlashBlade SSL Certifcates
+      name: purefb_certs
+      namespace: ''
+      version_added: 1.4.0
     purefb_connect:
       description: Manage replication connections between two FlashBlades
       name: purefb_connect
@@ -68,6 +83,11 @@ plugins:
       name: purefb_inventory
       namespace: ''
       version_added: 1.0.0
+    purefb_lifecycle:
+      description: Manage FlashBlade object lifecycles
+      name: purefb_lifecycle
+      namespace: ''
+      version_added: 1.4.0
     purefb_network:
       description: Manage network interfaces in a Pure Storage FlashBlade
       name: purefb_network
@@ -138,6 +158,11 @@ plugins:
       name: purefb_subnet
       namespace: ''
       version_added: 1.0.0
+    purefb_syslog:
+      description: Configure Pure Storage FlashBlade syslog settings
+      name: purefb_syslog
+      namespace: ''
+      version_added: 1.4.0
     purefb_target:
       description: Manage remote S3-capable targets for a FlashBlade
       name: purefb_target
@@ -152,4 +177,4 @@ plugins:
   shell: {}
   strategy: {}
   vars: {}
-version: 1.3.0
+version: 1.4.0
