--- a/collections/ansible_collections/purestorage/flashblade/changelogs/fragments/109_update_info.yaml
+++ b/collections/ansible_collections/purestorage/flashblade/changelogs/fragments/109_update_info.yaml
@@ -1,3 +1,3 @@
 minor_changes:
- - purefb_info - Add new parameter to privide details on local users
+ - purefb_info - Add new parameter to provide details on admin users
  - purefb_info - Add information regarding filesystem multiprotocol (where available)
