--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [3.6]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v1
@@ -20,8 +20,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install purity_fb pycodestyle flake8 pytz
-        pip install ansible-base
+        pip install 'purity_fb>=1.11' pycodestyle flake8 pytz
+        pip install git+https://github.com/ansible/ansible.git@devel
+        # pip install ansible-base
     - name: Run pycodestyle
       run: |
         pycodestyle --max-line-length=160 --ignore=E305,E402,W503,W504,E722,E741,W606 ./
