--- a/collections/ansible_collections/purestorage/flashblade/changelogs/fragments/114_certificate_update.yaml
+++ b/collections/ansible_collections/purestorage/flashblade/changelogs/fragments/114_certificate_update.yaml
@@ -1,2 +1,2 @@
 minor_changes:
-  - add update functionality for array cert in purefb_certs
+  - purefb_certs - add update functionality for array cert
