--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Run sanity tests
       run: |
         cd collections/ansible_collections/purestorage/flashblade
-        ansible-test sanity --docker -v
+        ansible-test sanity --docker -v --color
     - name: Run flake8
       run: |
         flake8 . --exit-zero --isolated --ignore E402 --select E,F,W --max-line-length 160
