--- a/collections/ansible_collections/purestorage/flashblade/changelogs/fragments/149_diff_support.yaml
+++ b/collections/ansible_collections/purestorage/flashblade/changelogs/fragments/149_diff_support.yaml
@@ -1,3 +1,3 @@
 minor_changes:
-  - purefb_fs - add diff for creating a filesystem
-  - purefb_fs - add diff for modifying a filesystem
+  - purefb_fs - Add diff for creating and modifying a filesystem
+  - purefb_dsrole - Add diff for creating and modifying a dsrole
