--- a/collections/ansible_collections/purestorage/flashblade/changelogs/changelog.yaml
+++ b/collections/ansible_collections/purestorage/flashblade/changelogs/changelog.yaml
@@ -35,7 +35,7 @@ releases:
         | This changlelog describes all changes made to the modules and plugins included
         in this collection since Ansible 2.9.0
 
-'
+        '
     fragments:
     - v1.3.0_summary.yaml
     release_date: '2020-08-06'
@@ -176,3 +176,36 @@ releases:
       name: purefb_virtualhost
       namespace: ''
     release_date: '2021-04-21'
+  1.7.0:
+    changes:
+      bugfixes:
+      - purefb_fs - Fix bug where changing the state of both NFS v3 and v4.1 at the
+        same time ignored one of these.
+      - purefb_s3acc - Ensure S3 Account Name is always lowercase
+      - purefb_s3user - Ensure S3 Account Name is always lowercase
+      - purefb_subnet - Allow subnet creation with no gateway
+      minor_changes:
+      - purefb_groupquota - New module for manage individual filesystem group quotas
+      - purefb_lag - Add support for LAG management
+      - purefb_snap - Add support for immeadiate snapshot to remote connected FlashBlade
+      - purefb_subnet - Add support for multiple LAGs.
+      - purefb_userquota - New module for manage individual filesystem user quotas
+    fragments:
+    - 147_no_gateway.yaml
+    - 150_fix_joint_nfs_version_change.yaml
+    - 152_s3acc_lowercase.yaml
+    - 153_add_quota.yaml
+    - 154_add_snap_now.yaml
+    - 158_support_lags.yaml
+    - 159_add_lag.yaml
+    modules:
+    - description: Manage filesystem group quotas
+      name: purefb_groupquota
+      namespace: ''
+    - description: Manage FlashBlade Link Aggregation Groups
+      name: purefb_lag
+      namespace: ''
+    - description: Manage filesystem user quotas
+      name: purefb_userquota
+      namespace: ''
+    release_date: '2021-09-27'
