--- a/collections/ansible_collections/purestorage/flashblade/changelogs/fragments/167_fix_logins.yaml
+++ b/collections/ansible_collections/purestorage/flashblade/changelogs/fragments/167_fix_logins.yaml
@@ -1,2 +1,2 @@
-minor_fixes:
+minor_changes:
   - purefb.py - Add check to ensure FlashBlade uses the latest REST version possible for Purity version installed
