--- a/collections/ansible_collections/purestorage/flashblade/galaxy.yml
+++ b/collections/ansible_collections/purestorage/flashblade/galaxy.yml
@@ -1,6 +1,6 @@
 namespace: purestorage
 name: flashblade
-version: 1.8.0
+version: 1.8.1
 readme: README.md
 authors:
 - Pure Storage Ansible Team <pure-ansible-team@purestorage.com>
@@ -16,5 +16,5 @@ tags:
   - nfs
 dependencies: {}
 repository: https://github.com/Pure-Storage-Ansible/FlashBlade-Collection
-documentation: https://docs.ansible.com/ansible/2.10/collections/purestorage/flashblade
+documentation: https://docs.ansible.com/ansible/latest/collections/purestorage/flashblade/index.html#plugins-in-purestorage-flashblade
 issues: https://github.com/Pure-Storage-Ansible/FlashBlade-Collection/issues
