--- a/collections/ansible_collections/purestorage/flashblade/changelogs/.plugin-cache.yaml
+++ b/collections/ansible_collections/purestorage/flashblade/changelogs/.plugin-cache.yaml
@@ -14,6 +14,11 @@ plugins:
       name: purefb_ad
       namespace: ''
       version_added: 1.6.0
+    purefb_admin:
+      description: Configure Pure Storage FlashBlade Global Admin settings
+      name: purefb_admin
+      namespace: ''
+      version_added: 1.8.0
     purefb_alert:
       description: Configure Pure Storage FlashBlade alert email settings
       name: purefb_alert
@@ -228,4 +233,4 @@ plugins:
   shell: {}
   strategy: {}
   vars: {}
-version: 1.8.1
+version: 1.9.0
