--- a/changelogs/.plugin-cache.yaml
+++ b/changelogs/.plugin-cache.yaml
@@ -1,4 +1,5 @@
-objects: {}
+objects:
+  role: {}
 plugins:
   become: {}
   cache: {}
@@ -55,7 +56,7 @@ plugins:
       namespace: ''
       version_added: 1.4.0
     purefb_certs:
-      description: Manage FlashBlade SSL Certifcates
+      description: Manage FlashBlade SSL Certificates
       name: purefb_certs
       namespace: ''
       version_added: 1.4.0
@@ -124,6 +125,11 @@ plugins:
       name: purefb_lifecycle
       namespace: ''
       version_added: 1.4.0
+    purefb_messages:
+      description: List FlashBlade Alert Messages
+      name: purefb_messages
+      namespace: ''
+      version_added: 1.10.0
     purefb_network:
       description: Manage network interfaces in a Pure Storage FlashBlade
       name: purefb_network
@@ -209,6 +215,11 @@ plugins:
       name: purefb_timeout
       namespace: ''
       version_added: 1.6.0
+    purefb_tz:
+      description: Configure Pure Storage FlashBlade timezone
+      name: purefb_tz
+      namespace: ''
+      version_added: 1.10.0
     purefb_user:
       description: Modify FlashBlade user accounts
       name: purefb_user
@@ -233,4 +244,4 @@ plugins:
   shell: {}
   strategy: {}
   vars: {}
-version: 1.9.0
+version: 1.10.0
