--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -69,6 +69,31 @@ releases:
       name: purefb_pingtrace
       namespace: ''
     release_date: '2023-04-13'
+  1.12.0:
+    changes:
+      bugfixes:
+      - purefb_bucket - Fixed bucket type mode name typo
+      - purefb_fs - Fixed issue with incorrect promotion state setting
+      minor_changes:
+      - purefb_fs - Added support for SMB client and share policies
+      - purefb_fs_replica - Added support to delete filesystem replica links from
+        REST 2.10
+      - purefb_info - Add drive type in drives subset for //S and //E platforms. Only
+        available from REST 2.9.
+      - purefb_info - Added support for SMB client and share policies
+      - purefb_policy - Added support for SMB client and share policies
+      - purefb_s3acc - Allow human readable quota sizes; eg. 1T, 230K, etc
+      - purefb_s3user - Add new boolean parameter I(multiple_keys) to limit access
+        keys for a user to a single key.
+    fragments:
+    - 222_bucket_type_fix.yaml
+    - 223_add_drive_type.yaml
+    - 224_smb_policies.yaml
+    - 225_delete_rl.yaml
+    - 227_s3acc_human_quota.yaml
+    - 230_prom_fix.yaml
+    - 232_multiple_keys.yaml
+    release_date: '2023-07-10'
   1.3.0:
     changes:
       bugfixes:
