--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,10 +1,10 @@
 namespace: purestorage
 name: flashblade
-version: 1.11.0
+version: 1.12.0
 readme: README.md
 authors:
   - Pure Storage Ansible Team <pure-ansible-team@purestorage.com>
-description: Collection of modules to manage Pure Storage FlashBlades
+description: Collection of modules to manage Pure Storage FlashBlade
 license:
   - GPL-3.0-or-later
   - BSD-2-Clause
