--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
           - stable-2.13
           - stable-2.14
           - stable-2.15
+          - stable-2.16
           - devel
         python-version:
           - 3.8
@@ -38,9 +39,14 @@ jobs:
           - python-version: 3.8
             ansible: stable-2.15
           - python-version: 3.8
+            ansible: stable-2.16
+          - python-version: 3.9
+            ansible: stable-2.16
+          - python-version: 3.8
             ansible: devel
           - python-version: 3.9
             ansible: devel
+
     steps:
     - name: Check out code
       uses: actions/checkout@v3
