--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -106,6 +106,29 @@ releases:
     - 237_info_policy.yaml
     - 239_access_rights.yaml
     release_date: '2023-09-07'
+  1.14.0:
+    changes:
+      bugfixes:
+      - purefb_userpolicy - Fixed `show` state for all user policies
+      minor_changes:
+      - purefb_bucket_replica - Added support for cascading replica links
+      - purefb_info - New fields to display free space (remaining quota) for Accounts
+        and Buckets. Space used by destroyed buckets is split out from virtual field
+        to new destroyed_virtual field
+      - purefb_info - Report encryption state in SMB client policy rules
+      - purefb_info - Report more detailed space data from Purity//FB 4.3.0
+      - purefb_policy - Add deny effect for object store policy rules. Requires Purity//FB
+        4.3.0+
+      - purefb_policy - Added parameter to define object store policy description
+    fragments:
+    - 238_user_policy.yaml
+    - 242_cascade.yaml
+    - 243_policy_desc.yaml
+    - 244_add_deny.yaml
+    - 245_quota_plus.yaml
+    - 246_smb_encrypt.yaml
+    - 247_space_consistency.yaml
+    release_date: '2023-10-04'
   1.3.0:
     changes:
       bugfixes:
