--- a/changelogs/fragments/263_fix_multiple_modules_idempotency.yaml
+++ b/changelogs/fragments/263_fix_multiple_modules_idempotency.yaml
@@ -1,4 +1,4 @@
 minor_changes:
   - purefb_ds - Add `force_bind_password` parameter to allow module to be idempotent.
-bug_fixes:
+bugfixes:
   - purefa_timeout - Fixed arithmetic error that resulted in module incorrectly reporting changed when no change was required.
