--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -38,7 +38,7 @@ releases:
   1.11.0:
     changes:
       bugfixes:
-      - purefa_info - Fixed issue when more than 10 buckets have lifecycle rules.
+      - purefb_info - Fixed issue when more than 10 buckets have lifecycle rules.
       - purefb_s3user - Fix incorrect response when bad key/secret pair provided for
         new user
       minor_changes:
@@ -153,6 +153,21 @@ releases:
       name: purefb_hardware
       namespace: ''
     release_date: '2024-01-12'
+  1.16.0:
+    changes:
+      bugfixes:
+      - purefb_bucket - Changed logic to allow complex buckets to be created in a
+        single call, rather than having to split into two tasks.
+      - purefb_lag - Enable LAG port configuration with multi-chassis
+      - purefb_timeout - Fixed arithmetic error that resulted in module incorrectly
+        reporting changed when no change was required.
+      minor_changes:
+      - purefb_ds - Add `force_bind_password` parameter to allow module to be idempotent.
+    fragments:
+    - 263_fix_multiple_modules_idempotency.yaml
+    - 266_bucket_fix.yaml
+    - 268_multi-chassis-lag.yaml
+    release_date: '2024-02-27'
   1.3.0:
     changes:
       bugfixes:
@@ -195,7 +210,7 @@ releases:
   1.4.0:
     changes:
       bugfixes:
-      - purefa_policy - Resolve multiple issues related to incorrect use of timezones
+      - purefb_policy - Resolve multiple issues related to incorrect use of timezones
       - purefb_connect - Ensure changing encryption status on array connection is
         performed correctly
       - purefb_connect - Fix breaking change created in purity_fb SDK 1.9.2 for deletion
@@ -285,7 +300,7 @@ releases:
   1.6.0:
     changes:
       minor_changes:
-      - purefa_virtualhost - New module to manage API Clients
+      - purefb_virtualhost - New module to manage API Clients
       - purefb_ad - New module to manage Active Directory Account
       - purefb_eula - New module to sign EULA
       - purefb_info - Add Active Directory, Kerberos and Object Store Account information
