--- a/changelogs/fragments/101_fix_policy_and_timezone_error.yaml
+++ b/changelogs/fragments/101_fix_policy_and_timezone_error.yaml
@@ -1,2 +1,2 @@
 bugfixes:
- - purefa_policy - Resolve multiple issues related to incorrect use of timezones
+ - purefb_policy - Resolve multiple issues related to incorrect use of timezones
