--- a/changelogs/fragments/205_fix_multi_lifecycle.yaml
+++ b/changelogs/fragments/205_fix_multi_lifecycle.yaml
@@ -1,2 +1,2 @@
 bugfixes:
- - purefa_info - Fixed issue when more than 10 buckets have lifecycle rules.
+ - purefb_info - Fixed issue when more than 10 buckets have lifecycle rules.
