--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -244,6 +244,13 @@ releases:
       name: purefb_saml
       namespace: ''
     release_date: '2024-11-01'
+  1.19.1:
+    changes:
+      minor_changes:
+      - purefb_bucket - Allow bucket quotas to be modified.
+    fragments:
+    - 317_quota_update.yaml
+    release_date: '2024-11-03'
   1.3.0:
     changes:
       bugfixes:
