--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -272,6 +272,60 @@ releases:
     - 329_no_policy_snap.yaml
     - 336_policy_fix.yaml
     release_date: '2024-12-05'
+  1.20.0:
+    changes:
+      bugfixes:
+      - purefb_bucket - Resolved issue with removing bucket quota
+      - purefb_info - Fixed issue after SMD Directory Services no longer avaible from
+        REST 2.16
+      - purefb_policy - Fixed creation of snapshot policies with assigned filesystems
+        and/or replica links
+      - purefb_s3acc - Fixed issue with public access config settings not being correctly
+        for an account
+      minor_changes:
+      - purefb_ad - Add support for Global Catalog Servers
+      - purefb_dns - Added support for multiple DNS configurations.
+      - purefb_ds - SMB directory services deprecated from Purity//FB 4.5.2
+      - purefb_info - Add support for Active Directory Global Catalog Servers
+      - purefb_info - Added snapshot creation date-time and time_remaining, if snapshot
+        is not deleted, to the ``snapshots`` response.
+      - purefb_info - Added support for multiple DNS configurations.
+      - purefb_policy - Snapshot policies can now have specific filesystems and/or
+        replica links added or deletred from the policy
+      - purefb_proxy - Added support to update existing proxy
+      - purefb_proxy - Updated to REST v2
+      - purefb_s3user - Changed ``key_state`` state to be ``keystate`` as ``key_state``
+        is reserved.
+      - purefb_s3user - Changed ``remove_key`` parameter to ``key_name`` and add new
+        ``state`` of ``key_state`` to allow a specificed key to be enabled/disabled
+        using the new parameter ``enable_key``.
+      - purefb_s3user - Updated failure messages for applying policies to an object
+        user account.
+      - purefb_subnet - ``prefix`` removed as a required parameter for updating an
+        existing subnet
+    fragments:
+    - 331_multi_dns.yaml
+    - 332_ad_update.yaml
+    - 338_update_s3.yaml
+    - 340_snap_creation.yaml
+    - 342_no_smb_ds.yaml
+    - 349_no_smb_info.yaml
+    - 349_none_proxy.yaml
+    - 353_s3user_enhanced_policy_reporting.yaml
+    - 358_bucket_quota.yaml
+    - 359_snap_policy_update.yaml
+    - 360_subnet_prefix.yaml
+    modules:
+    - description: Manage FlashBlade bucket access policies
+      name: purefb_bucket_access
+      namespace: ''
+    - description: Manage Fusion Fleet
+      name: purefb_fleet
+      namespace: ''
+    - description: Manage FlashBlade servers
+      name: purefb_server
+      namespace: ''
+    release_date: '2025-05-02'
   1.3.0:
     changes:
       bugfixes:
