--- a/changelogs/.plugin-cache.yaml
+++ b/changelogs/.plugin-cache.yaml
@@ -252,7 +252,7 @@ plugins:
       namespace: ''
       version_added: 1.10.0
     purefb_user:
-      description: Modify FlashBlade user accounts
+      description: Create, modify or delete FlashBlade user accounts
       name: purefb_user
       namespace: ''
       version_added: 1.0.0
@@ -276,4 +276,4 @@ plugins:
   strategy: {}
   test: {}
   vars: {}
-version: 1.20.0
+version: 1.21.0
