--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -326,6 +326,54 @@ releases:
       name: purefb_server
       namespace: ''
     release_date: '2025-05-02'
+  1.21.0:
+    changes:
+      bugfixes:
+      - puref_policy - Fixed typo when calling object store policy rule deletion
+      - purefb_ad - Fixed issue where updating an AD account required unnecessary
+        parameters.
+      - purefb_bucket - Fix versioning control and access rules for public buckets
+      - purefb_bucket - Fixed issue where a bucket with no versioning defined was
+        incorrectly created.
+      - purefb_bucket - Fixed issue with default retention parameter
+      - purefb_bucket_access - Fixed typo in CORS rule definition
+      - purefb_certs - Fixed issues with importing external certificates
+      - purefb_certs - Updated email regex pattern to fix ``re`` failures
+      - purefb_dns - Fixed multiple issues for data DNS configuration
+      - purefb_fs - Ensured that NFS rules are emprty if requested filesystem is SMB
+        only
+      - purefb_info - Fixed error when ``default`` subset fails if SMD has been disabled
+        on the FLashBlade
+      - purefb_s3user - Fixed typo in imported keys code
+      - purefb_subnet - Ensured prefix is required for subnet creation or update
+      minor_changes:
+      - purefb_ad - ``service`` parameter removed to comply with underlying API structure.
+        ``service`` should be included in the ``service_principals`` strings as shown
+        in the documentation.
+      - purefb_saml - Added ``entity_id`` parameter
+      - purefb_snap - Add support to delete/eradicate remote snapshots, including
+        the latest replica
+      - purefb_user - All AD users to have SSH keys and/or API tokens assigned, even
+        if they have never accessed the FlashArray before. AD users must have ``ad_user``
+        set as ``true``.
+    fragments:
+    - 344_remote_snap.yaml
+    - 364_dns_fixes.yaml
+    - 365_s3user_fix.yaml
+    - 366_bucket_policy_fix.yaml
+    - 367_bucket_retention.yaml
+    - 369_ad_fix.yaml
+    - 374_subnet_prefix.yaml
+    - 375_saml_entity_id.yaml
+    - 377_info_smb_ds.yaml
+    - 379_public_buckets.yaml
+    - 382_cert_regex.yaml
+    - 383_ext_ceet.yaml
+    - 385_policy_function_typo.yaml
+    - 386_ad_user_support.yaml
+    - 387_smb_no_nfs.yaml
+    - 389_bucket_no_versioning.yaml
+    release_date: '2025-09-02'
   1.3.0:
     changes:
       bugfixes:
