--- a/changelogs/fragments/385_policy_function_typo.yaml
+++ b/changelogs/fragments/385_policy_function_typo.yaml
@@ -1,2 +1,2 @@
 bugfixes:
- - puref_policy - Fixed typo when calling object store policy rule deletion
+ - purefb_policy - Fixed typo when calling object store policy rule deletion
