--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -329,7 +329,6 @@ releases:
   1.21.0:
     changes:
       bugfixes:
-      - purefb_policy - Fixed typo when calling object store policy rule deletion
       - purefb_ad - Fixed issue where updating an AD account required unnecessary
         parameters.
       - purefb_bucket - Fix versioning control and access rules for public buckets
@@ -344,6 +343,7 @@ releases:
         only
       - purefb_info - Fixed error when ``default`` subset fails if SMD has been disabled
         on the FLashBlade
+      - purefb_policy - Fixed typo when calling object store policy rule deletion
       - purefb_s3user - Fixed typo in imported keys code
       - purefb_subnet - Ensured prefix is required for subnet creation or update
       minor_changes:
@@ -373,6 +373,15 @@ releases:
     - 386_ad_user_support.yaml
     - 387_smb_no_nfs.yaml
     - 389_bucket_no_versioning.yaml
+    release_date: '2025-09-02'
+  1.21.1:
+    changes:
+      minor_changes:
+      - purefb_ad - Revert removal of ``service`` parameter (breaking change). Added
+        more logic to use of ``service`` parameter and recommend use of ``service_principals``
+        with service incorporated.
+    fragments:
+    - 391_revert_ad_service.yaml
     release_date: '2025-09-02'
   1.3.0:
     changes:
