--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -383,6 +383,8 @@ releases:
     fragments:
     - 391_revert_ad_service.yaml
     release_date: '2025-09-02'
+  1.21.2:
+    release_date: '2025-09-09'
   1.3.0:
     changes:
       bugfixes:
