--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -493,6 +493,25 @@ releases:
       name: purefb_kmip
       namespace: ''
     release_date: '2025-10-10'
+  1.23.0:
+    changes:
+      bugfixes:
+      - purefb_alert - Fixed issue with syntax error in update function
+      - purefb_bucket_replica - Fixed issue with ItemIterator error
+      minor_changes:
+      - purefa_ad - Added support for local servers using the ``server`` parameter.
+      - purefb_ad - Added test and rotate states
+      - purefb_ad - Remove doc references to FQDNs as SPNs are the required method.
+      - purefb_ad - Updated encryption algorithms to use correct values
+      - purefb_ds - Allow directory services to be modified for internal NFS servers
+      - purefb_ds - Update test state to allow specific tests to be run
+    fragments:
+    - 450_ad_fqdn.yaml
+    - 454_ds_test.yaml
+    - 455_alert_fix.yaml
+    - 456_ad_test.yaml
+    - 465_bkt_repl_ite_fix.yaml
+    release_date: '2025-12-10'
   1.3.0:
     changes:
       bugfixes:
