Fix typo in ping XFM module bugfix entry

--- a/changelogs/fragments/467_ping_xfm_fix.yaml
+++ b/changelogs/fragments/467_ping_xfm_fix.yaml
@@ -1,2 +1,2 @@
 bugfixes:
- - purefb_pingtrace - Fiexed issue with XFM module when state is ping
+ - purefb_pingtrace - Fixed issue with XFM module when state is ping
