Use actual list length checks instead of total_item_count
total_item_count does not always correctly report the number of items,
so we should check the actual list length instead.

Changes:
- get_local_bucket(): Convert to list first, then check if items exist
- get_remote_cred(): Convert to list first, then check if items exist
- get_local_rl(): Convert to list first, then check if items exist

This is more reliable than checking total_item_count which can be inaccurate.

--- a/changelogs/fragments/XXX_fix_bucket_replica_indexerror.yaml
+++ b/changelogs/fragments/XXX_fix_bucket_replica_indexerror.yaml
@@ -1,6 +1,7 @@
 bugfixes:
   - purefb_bucket_replica - Fixed IndexError 'list index out of range' in get_connected() function
-  - purefb_bucket_replica - Added safety checks for empty lists in get_local_bucket() and get_remote_cred()
+  - purefb_bucket_replica - Added safety checks for empty lists before accessing [0] index
   - purefb_bucket_replica - Fixed iteration anti-pattern using range(len()) that could cause IndexError
+  - purefb_bucket_replica - Check actual list length instead of unreliable total_item_count
   - purefb_bucket_replica - Added validation for missing target parameter when creating new replica links
 
