--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ name: Pure Storage Ansible CI
   schedule:
     - cron: '25 10 * * *'
 
+permissions:
+  contents: read
+
 jobs:
   build:
     name: Build flashblade on Ansible ${{ matrix.ansible }} (Python ${{ matrix.python-version }})
